--- a/src/App/app.css
+++ b/src/App/app.css
@@ -1,5 +1,12 @@
 html,body{margin:0;padding:0}
 
+
+.error-to-user{
+	background-color: lightsalmon;
+	padding: 1rem;
+	margin: 0.5rem;
+	height: fit-content;
+}
 .paper {
     margin-bottom: 0.5rem;
     margin-top: 0.5rem;
