--- a/src/App/app.css
+++ b/src/App/app.css
@@ -33,7 +33,7 @@ html,body{margin:0;padding:0}
     padding: 5px 14px 5px;
     border-radius: 3px;
     background: #e8e8e8;
-    color: #000;
+    color: rgb(0, 0, 0);
     width: fit-content;
     cursor: pointer;
 }
